--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "spatie/laravel-feed": "^2.6",
-        "spatie/laravel-google-calendar": "^2.3"
+        "spatie/laravel-google-calendar": "^2.3",
+	"symfony/translation-contracts": "^1.1.6"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
